fix: arial font on firefox

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+/* Main page */
+body {
+    font-family: 'Arial';
+}
+
 /* Buttons */
 button {
     background-color: #495c9c;
